--- a/config/config.env
+++ b/config/config.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://ajit123:ajit123@cluster0-1epoa.mongodb.net/user_data?retryWrites=true&w=majority
+ process.env.TZ = 'Asia/Kolkata'
