--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.19"
