--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,9 @@
 MONGO_URI=mongodb+srv://ajit123:ajit123@cluster0-1epoa.mongodb.net/user_data?retryWrites=true&w=majority
- process.env.TZ = 'Asia/Kolkata'
+MSG91_AUTH_API=308638AX7iu56VzNa5eed9e6fP1
+MSG91_SENDER_ID=LTLFST
+MSG91_ROUTING_NO=4
+MOBILE_NO=7008310327
+FLAG_1=FINDBOND
+FLAG_2=REPLY
+FLAG_3=PASS
+ 
