--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "msg91": "0.0.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
