--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.19",
-    "msg91": "0.0.6"
+    "msg91": "0.0.6",
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
