--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "data_store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node server.js",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
@@ -21,6 +21,10 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "colors": "^1.4.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
