--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb+srv://ajit123:ajit123@cluster0-1epoa.mongodb.net/user_data?retryWrites=true&w=majority
+PORT=5000
 MSG91_AUTH_API=308638AX7iu56VzNa5eed9e6fP1
 MSG91_SENDER_ID=LTLFST
 MSG91_ROUTING_NO=4
