--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "data_store",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "server": "node server.js",
     "dev": "nodemon server"
   },
-  "author": "",
+  "author": "Invincix",
   "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "colors": "^1.4.0"
+  },
   "dependencies": {
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
@@ -17,12 +23,6 @@
     "msg91": "0.0.6",
     "qr-image": "^3.2.0",
     "qrcode": "^1.4.4"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "colors": "^1.4.0"
   },
   "engines": {
     "node": "10.x"
