--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "data_store",
   "version": "1.0.0",
-  "description": "",
+  "description": "User data app",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js",
-    "dev": "nodemon server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Invincix",
-  "license": "ISC",
+  "license": "MIT",
+
   "devDependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "colors": "^1.4.0"
+    "mongoose": "^5.9.2",
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
     "dateformat": "^3.0.3",
