--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "colors": "^1.4.0",
 
     "mongoose": "^5.9.2",
-    "nodemon": "^2.0.2",
-    "morgan": "^1.9.1"
+    "nodemon": "^2.0.2"
+    
   },
   "dependencies": {
     "dateformat": "^3.0.3",
@@ -23,7 +23,8 @@
     "msg91": "0.0.6",
     "qr-image": "^3.2.0",
     "qrcode": "^1.4.4",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "morgan": "^1.9.1"
   },
   "engines": {
     "node": "10.x"
