--- a/package.json
+++ b/package.json
@@ -9,23 +9,21 @@
   "author": "Invincix",
   "license": "MIT",
   "devDependencies": {
-    
-
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2"
-    
   },
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dateformat": "^3.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.19",
+    "morgan": "^1.9.1",
     "msg91": "0.0.6",
     "qr-image": "^3.2.0",
-    "qrcode": "^1.4.4",
-    "dotenv": "^8.2.0",
-    "morgan": "^1.9.1",
-    "colors": "^1.4.0"
+    "qrcode": "^1.4.4"
   },
   "engines": {
     "node": "10.x"
